Add practice and examples folders for agent development workflow
- Add git-ignored practice/ folder for experimental agents
- Add examples/ folder for tutorial-ready agents
- Ensure tau-lang directories are git ignored
- Document workflow: practice -> test -> examples

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,12 @@ tau_daemon_alpha/ledger/**
 tau_daemon_alpha/.tau_lang_cache/**
 tau-lang*/
 tau_lang*/
+tau-lang-latest/
+tau_lang_latest/
+
+# Practice/development folder (work in progress agents)
+practice/
+.practice/
 
 # Editor/OS
 .DS_Store
