Continue ZK proof work: add Q-table guest program and prover
- Created Q-table action selection guest program (idi-qtable)
- Added Q-table prover Python wrapper
- Updated Risc0 workspace to include new guest program
- Documentation fixes completed
- Ready for guest program compilation and testing

--- a/idi/zk/risc0/Cargo.toml
+++ b/idi/zk/risc0/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["host", "methods", "methods/idi-manifest"]
+members = ["host", "methods", "methods/idi-manifest", "methods/idi-qtable"]
 resolver = "2"
 
 [workspace.package]
