--- a/idi/zk/risc0/methods/Cargo.toml
+++ b/idi/zk/risc0/methods/Cargo.toml
@@ -4,7 +4,7 @@ version.workspace = true
 edition.workspace = true
 
 [package.metadata.risc0]
-methods = ["idi-manifest"]
+methods = ["idi-manifest", "idi-qtable"]
 
 [dependencies]
 risc0-zkvm = { workspace = true, default-features = false }
