Implement Tau Testnet ZK integration bridge
- Created idi/taunet_bridge/ module following SOLID principles
- Implemented ZkVerifier/ZkProver protocols (ISP)
- Implemented TauNetZkAdapter (Bridge Pattern, DIP)
- Implemented ZkValidationStep (Chain of Responsibility)
- Implemented BlockZkExtension (OCP)
- Implemented ZkGossipProtocol (Adapter Pattern)
- Implemented state integration with proof-verified transitions
- Added comprehensive TDD test suite (32 tests)
- Added documentation and README
- License-compliant: separate bridge module, minimal Tau Testnet changes
- All tests passing (32/32)

--- a/.gitignore
+++ b/.gitignore
@@ -68,5 +68,7 @@ tectonic
 # Embedded git repos (submodules should be configured properly)
 .lake/packages/
 
+# Tau Testnet reference (for integration development)
+tau-testnet-ref/
 
-.cursor/
+
