Harden ZK bridge with validation caps and security audits
- Add safety caps to validation: payload size (1MB), proof size (512KB), field count (1000)
- Tighten Merkle tree validation and bounds checking in proof manager
- Remove tracked .pyc files and improve .gitignore for development artifacts
- Add comprehensive ZK integration docs and security audit logs
- Update README with completed Tau Testnet integration
- Add pre-commit hooks for code quality and security linting
- Complete security hardening: threat model, checklist, and audit findings
- Add property-based testing infrastructure and fuzzing setup
- Implement end-to-end security tests and formal verification hooks

Tau Testnet reference properly git-ignored (no license ownership)

--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,12 @@ tectonic
 *.cover
 .pytest_cache/
 
+# Python linting artifacts
+.ruff_cache/
+
+# Tau development artifacts
+.tau_history
+
 # Lean build artifacts
 .lake/
 *.olean
