docs: Update documentation to reflect Risc0 ZK proof production readiness
- Update README.md to show Risc0 is fully functional (not just infrastructure)
- Update idi/zk/README.md with complete Risc0 implementation details
- Update idi/taunet_bridge/README.md to recommend risc0 for production
- Add TAU_TESTNET_INTEGRATION_RECOMMENDATIONS.md with 10 prioritized enhancements
- Document end-to-end testing and privacy guarantees
- Reflect current working state: all 26 patterns complete, Risc0 proofs working

--- a/idi/zk/risc0/methods/idi-manifest/Cargo.toml
+++ b/idi/zk/risc0/methods/idi-manifest/Cargo.toml
@@ -6,6 +6,6 @@ publish = false
 
 [dependencies]
 risc0-zkvm = { workspace = true, default-features = false }
-sha2 = { workspace = true, default-features = false }
-serde = { workspace = true, default-features = false }
+sha2 = { workspace = true, default-features = false, features = ["oid"] }
+serde = { workspace = true, default-features = false, features = ["derive", "alloc"] }
 
