docs: Fix production status date and gitignore AI developer documents
- Fix PRODUCTION_STATUS.md date from 2025-01-XX to 2025-12-07
- Add .gitignore patterns for AI-generated developer documents:
  - PRODUCTION_STATUS.md and similar production/readiness docs
  - CODEBASE_ANALYSIS*.md and other analysis documents
  - *_TODO.md, *_REVIEW.md, *_REPORT.md patterns
- Remove PRODUCTION_STATUS.md and CODEBASE_ANALYSIS_TODO.md from git tracking
  (files remain locally but are now ignored for future commits)

These are internal developer documents that don't need to be in the repo.

--- a/.gitignore
+++ b/.gitignore
@@ -77,4 +77,17 @@ tectonic
 # Tau Testnet reference (for integration development)
 tau-testnet-ref/
 
+# AI-generated developer documents (internal use only)
+PRODUCTION_STATUS.md
+*PRODUCTION*.md
+*READINESS*.md
+*DEPLOYMENT*.md
+*CHECKLIST*.md
+CODEBASE_ANALYSIS*.md
+*ANALYSIS*.md
+*_ANALYSIS.md
+*_TODO.md
+*_REVIEW.md
+*_REPORT.md
+
 
