--- a/tau_daemon_alpha/daemon/Cargo.toml
+++ b/tau_daemon_alpha/daemon/Cargo.toml
@@ -17,3 +17,6 @@ chrono = { version = "0.4", features = ["serde"] }
 sha2 = "0.10"
 toml = "0.8"
 uuid = { version = "1", features = ["v4"] }
+
+[dev-dependencies]
+tempfile = "3"
