ci(security): disable setup-uv cache to avoid early pyproject parse

--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -42,10 +42,7 @@ jobs:
         uses: astral-sh/setup-uv@v7
         with:
           python-version: "3.12"
-          enable-cache: true
-          cache-dependency-glob: |
-            pyproject.toml
-            uv.lock
+          enable-cache: false
 
       - name: Show project context
         run: |
