--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -38,11 +38,16 @@ jobs:
           echo "---- pyproject.toml (root) ----"
           sed -n '1,40p' "${{ github.workspace }}/pyproject.toml"
 
-      - name: Install uv
-        uses: astral-sh/setup-uv@v7
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
           python-version: "3.12"
-          enable-cache: false
+
+      - name: Install uv
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install "uv==0.7.13"
+          uv --version
 
       - name: Show project context
         run: |
