ci(security): re-enable automatic triggers (pip-based workflow)

--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -1,7 +1,18 @@
 name: Security (Python Dependencies)
 
 on:
-  # Manual trigger only - disabled automatic runs until workflow is stabilized
+  push:
+    branches: [main]
+    paths:
+      - "pyproject.toml"
+      - "idi/**"
+      - ".github/workflows/security.yml"
+  pull_request:
+    branches: [main]
+    paths:
+      - "pyproject.toml"
+      - "idi/**"
+      - ".github/workflows/security.yml"
   workflow_dispatch:
 
 jobs:
