--- a/idi/ian/deploy/config/production.yaml
+++ b/idi/ian/deploy/config/production.yaml
@@ -31,6 +31,7 @@ network:
     port: 9000
     max_peers: 50
     connection_timeout: 10.0
+    handshake_timeout: 5.0
     
   # WebSocket transport
   websocket:
@@ -38,6 +39,7 @@ network:
     host: 0.0.0.0
     port: 9001
     max_connections: 1000
+    unauthenticated_timeout: 10.0
     
   # REST API
   api:
