--- a/idi/ian/deploy/docker-compose.yml
+++ b/idi/ian/deploy/docker-compose.yml
@@ -195,7 +195,7 @@ services:
     environment:
       # SECURITY: Use environment variable for admin password in production
       # Set GF_SECURITY_ADMIN_PASSWORD in your .env file or environment
-      - GF_SECURITY_ADMIN_PASSWORD=${GF_SECURITY_ADMIN_PASSWORD:-changeme}
+      - GF_SECURITY_ADMIN_PASSWORD=${GF_SECURITY_ADMIN_PASSWORD:?GF_SECURITY_ADMIN_PASSWORD must be set}
       - GF_USERS_ALLOW_SIGN_UP=false
     volumes:
       - grafana-data:/var/lib/grafana
