--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,13 @@ gui = [
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
+[tool.hatch.build.targets.wheel]
+only-packages = true
+
+[tool.hatch.build.targets.wheel.force-include]
+"idi/ian/network/openapi.yaml" = "idi/ian/network/openapi.yaml"
+"idi/ian/deploy/config" = "idi/ian/deploy/config"
+
 [tool.pytest.ini_options]
 python_files = ["test_*.py"]
 python_classes = ["Test*"]
