--- a/idi/ian/zkml/nova_ffi/Cargo.toml
+++ b/idi/ian/zkml/nova_ffi/Cargo.toml
@@ -16,6 +16,10 @@ nova-snark = { git = "https://github.com/microsoft/Nova", features = ["asm"] }
 # Pasta curves (Pallas/Vesta cycle)
 pasta_curves = "0.5"
 
+# Constraint system + field traits used by Nova circuits
+bellpepper-core = "0.4"
+ff = "0.13"
+
 # Arkworks for field/curve arithmetic
 ark-ff = "0.4"
 ark-ec = "0.4"
@@ -30,7 +34,6 @@ serde_json = "1.0"
 bincode = "1.3"
 
 # Cryptography
-sha2 = "0.10"
 rand = "0.8"
 
 # Error handling
