--- a/idi/gui/frontend/tsconfig.json
+++ b/idi/gui/frontend/tsconfig.json
@@ -7,6 +7,7 @@
     "strict": true,
     "noEmit": true,
     "esModuleInterop": true,
+    "types": ["jest", "@testing-library/jest-dom", "node"],
     "module": "esnext",
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
