--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,11 +27,15 @@ dev = [
     "pandas>=2.0.0",
     "hypothesis>=6.0.0",
     "pip-audit>=2.9.0",
+    "z3-solver>=4.12.5.0",
 ]
 gui = [
     "fastapi>=0.110.0",
     "uvicorn>=0.27.0",
     "websockets>=12.0",
+]
+security = [
+    "keyring>=24.0.0",
 ]
 
 [build-system]
@@ -51,6 +55,9 @@ python_classes = ["Test*"]
 python_functions = ["test_*"]
 addopts = "-v --tb=short"
 norecursedirs = ["mutants"]
+markers = [
+    "asyncio: mark a test as requiring an asyncio event loop (pytest-asyncio)",
+]
 filterwarnings = [
     "ignore::DeprecationWarning",
 ]
